Updated controller routing and some names. Updated SwaggerAPI.json to be consistent with those updates.
