# FitnessLeaderBoardAPI/Controllers/UserActivitiesController.cs
@@ -6,7 +6,7 @@ using Microsoft.EntityFrameworkCore;
 
 namespace FitnessLeaderBoardAPI.Controllers
 {
-    [Route("api/[controller]")]
+    [Route("api/[controller]/[action]")]
     [ApiController]
     public class UserActivitiesController : ControllerBase
     {
